Fix flickering height on hovered menus

--- a/webdice_web/static/sass/main.sass
+++ b/webdice_web/static/sass/main.sass
@@ -119,7 +119,6 @@ g.visuallyhidden
     margin: 0
     &.active > a
       color: #b7b7b7!important
-
     & + li
       padding: 0 0 0 1em
       position: relative
@@ -148,7 +147,6 @@ g.visuallyhidden
           a
             color: black
         &:hover
-          overflow: visible
           height: auto
       &:hover ul
         display: block
